--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -70,7 +70,7 @@ RUN apt-get update && \
         libqt5core5a \
         libqt5gui5 \
         libqt5widgets5 \
-        libcurl4
+        ffmpeg
 
 # Copy all files from /colmap-install/ in the builder stage to /usr/local/ in
 # the runtime stage. This simulates installing COLMAP in the default location
